adjustment made on navigation bar and icon with some alignment fix

--- a/main.css
+++ b/main.css
@@ -13,6 +13,12 @@ html{
   background-color: #ecfaf6;
   opacity: 1;
   padding: 1em;
+}
+#nav-abo{
+  font-family: 'Fira Sans', sans-serif;
+  color: #2c2e2d;
+  font-size:28px;
+}
 
 }
 h1{
@@ -22,32 +28,7 @@ h1{
   color: #2c2e2d;
   font-size:28px;
 }
-.navigation {
 
-  text-align: center;
-  -webkit-flex-flow: column wrap;
-  flex-flow: column wrap;
-
-  padding: 0;
-}
-.navigation li{
-  padding-top: 0.5em;
-  padding-bottom:0.5em;
-}
-.navigation a {
-  text-decoration: none;
-  font-size: 1em;
-  text-align: center;
-  padding: 0.5em 0;
-  font-family: 'Fira Sans', cursive;
-  display: block;
-  color: #2c2e2d;
-}
-
-
-.navigation li:last-of-type a {
-  border-bottom: none;
-}
 #about{
    display: flex;
     width: 100%;
@@ -86,8 +67,10 @@ h1{
     }
 
       #box11 iframe {
-       height: 100%;
-       width: 100%;
+        display: flex;
+        margin: auto;
+
+
     }
 
     h3,h4,h5,h6,h7 {
@@ -106,19 +89,23 @@ h1{
       padding-top :2em;
     }
 
-    .projectbox{
+    #projectbox{
       display: flex;
       width: 100%;
       align-items: center;
       justify-content: space-between;
       flex-flow: column;
+      font-family: 'News Cycle', sans-serif;
+      color: #2c2e2d;
+      font-size:1em;
+      text-align: center;
 
     }
     img {
       display: block;
       max-width: 100%;
     }
-    .projectbox li {
+    #projectbox li {
       padding-top: :1em;
       padding-bottom:1em;
       padding-left:0.222em;
@@ -156,6 +143,10 @@ h1{
       align-items: center;
       justify-content: space-between;
       flex-flow: column;
+      font-family: 'News Cycle', sans-serif;
+      color: #2c2e2d;
+      font-size:1em;
+      text-align: center;
 
 
     }
@@ -176,7 +167,7 @@ h1{
       flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
-
+      padding-top: 2em;
       border-top: 0px solid rgba(255,255,255,0.3);
       border-bottom: 0px solid rgba(0,0,0,0.1);
     }
@@ -190,6 +181,10 @@ h1{
 
       justify-content: space-between;
       flex-flow: column;
+      font-family: 'News Cycle', sans-serif;
+      color: #2c2e2d;
+      font-size:1em;
+      text-align: center;
     }
     .travelbox li {
       padding-top: :1em;
@@ -291,6 +286,67 @@ h1{
   color: white;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: #ecfaf6;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #2c2e2d;
+  text-align: center;
+  font-family: 'Fira Sans', sans-serif;
+
+  padding-left: 1em;
+  padding-right: 1em;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #ecfaf6;
+  color: #2c2e2d;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 640px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+
+    float: right;
+    display: block;
+
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    padding-top: 1em;
+    padding-bottom: 1em;
+
+  }
+}
+
+
 
 @media screen and (min-width: 568px) {
   #about{
@@ -306,25 +362,28 @@ h1{
 #profilepic{
   display: flex;
   order: 2;
-  background: yellow;
-  flex-basis: 50%;
+  flex-basis: 100%;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: flex-end;
 
 }
 
 #profilepic img {
 
-    flex: 1 1 auto;
+    flex: 0.1 0.1 auto;
     border-radius: 50%;
-    max-width:75%;
+    max-width:35%;
     height: auto;
+    margin: auto;
 
    }
 
+
+
+
   #box11 {
    order: 3;
-   flex-basis: 50%;
+   flex-basis: 100%;
    overflow: hidden;
    padding-top: 56.25%;
    position: relative;
@@ -332,8 +391,10 @@ h1{
  }
 
    #box11 iframe {
+    display: flex;
+    margin: auto;
     border: 0;
-    height: 56.25%;
+    height: 100%;
     left: 0;
     position: absolute;
     top: 0;
@@ -358,7 +419,7 @@ img{
   max-width: 100%
 }
 
-.projectbox{
+#projectbox{
   display: flex;
   width: 100%;
   align-items: center;
@@ -366,7 +427,7 @@ img{
   flex-flow: row wrap-reverse;
   padding: 5px;
 }
-.projectbox li {
+#projectbox li {
   flex: 1 1 200px;
 padding-left:3em;
 padding-right:3em;
@@ -380,6 +441,7 @@ padding-bottom:1.5em;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  padding-top: 2em;
   padding-right: 1em;
   border-top: 0px solid rgba(255,255,255,0.3);
   border-bottom: 0px solid rgba(0,0,0,0.1);
